--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,13 +4,19 @@ uvicorn[standard]>=0.29.0,<0.30.0
 
 # ORM & Database Driver
 sqlmodel>=0.0.16,<0.0.17
-psycopg2-binary>=2.9.9,<2.10.0
-# asyncpg>=0.29.0,<0.30.0 # 非同期処理を多用する場合はこちらを検討
+# psycopg2-binary>=2.9.9,<2.10.0
+asyncpg>=0.29.0,<0.30.0 # 非同期処理を多用する場合はこちらを検討
+pydantic-settings>=2.0.0,<3.0.0
 
 # Environment Variables
 python-dotenv>=1.0.1,<1.1.0
 
-# Add other dependencies as needed
-
 # Linter & Formatter
 ruff>=0.4.0,<0.5.0
+
+# Migration
+alembic>=1.13.0,<1.14.0
+
+# Testing
+pytest>=8.0.0,<9.0.0 # テストフレームワーク
+httpx>=0.27.0,<0.28.0 # FastAPIのTestClientが内部で使用
