--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,5 @@ alembic>=1.13.0,<1.14.0
 # Testing
 pytest>=8.0.0,<9.0.0 # テストフレームワーク
 httpx>=0.27.0,<0.28.0 # FastAPIのTestClientが内部で使用
+aiosqlite>=0.20.0,<0.21.0 # テスト用インメモリDB (SQLite) ドライバ
+pytest-asyncio>=0.23.0,<0.24.0
