--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ sqlmodel>=0.0.16,<0.0.17
 # psycopg2-binary>=2.9.9,<2.10.0
 asyncpg>=0.29.0,<0.30.0 # 非同期処理を多用する場合はこちらを検討
 pydantic-settings>=2.0.0,<3.0.0
+pydantic[email]>=2.6.4,<3.0.0
 
 # Environment Variables
 python-dotenv>=1.0.1,<1.1.0
